a1/brendan_gordon/TEST_PROGRAMS/invalidtype/shivan_sahib/missing_decl.min
var x : string;

y = 1;

